[gd_scene load_steps=4 format=3 uid="uid://pnqc5qhbefii"]

[ext_resource type="Texture2D" uid="uid://bug38v5hg37pk" path="res://assets/enemy_purple.png" id="1_ymmvc"]
[ext_resource type="Script" path="res://Scripts/gd_enemy.gd" id="2_2mec5"]
[ext_resource type="Script" path="res://Scripts/gd_area.gd" id="2_iuxln"]

[node name="GDEnemy_purple" type="GDExample"]
position = Vector2(-1959.35, 527.337)
rotation = -1.5708
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_ymmvc")
centered = false
script = ExtResource("2_2mec5")

[node name="enemy_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_iuxln")

[node name="Sprite2D" type="Sprite2D" parent="enemy_area"]
position = Vector2(1120, 1140)
texture = ExtResource("1_ymmvc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="enemy_area"]
polygon = PackedVector2Array(1127.22, -54.3729, 2067.22, 985.63, 2187.22, 2185.63, 1147.21, 2405.63, 87.2159, 2165.62, 147.22, 985.623, 467.222, 585.625)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1127.21, 2647.13)
scale = Vector2(51.6329, 15.5876)

[connection signal="body_entered" from="enemy_area" to="enemy_area" method="_on_body_entered"]
[connection signal="hit_gd" from="enemy_area" to="." method="_on_enemy_area_hit_gd"]
[connection signal="killed_gd" from="enemy_area" to="." method="_on_enemy_area_killed_gd"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="enemy_area" method="_on_visible_on_screen_notifier_2d_screen_exited"]
